fix button align

--- a/src/styles/tags/contact-control.scss
+++ b/src/styles/tags/contact-control.scss
@@ -4,6 +4,7 @@
 
   &__cell {
     display: table-cell;
+    vertical-align: middle;
   }
 
   .invalid {
